--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "add": "^2.0.6",
     "aos": "^2.3.4",
     "daisyui": "^2.15.0",
+    "emailjs": "^4.0.0",
+    "emailjs-com": "^3.2.0",
     "heroicons": "^1.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
