--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.0.6",
     "sweetalert2": "^11.4.17",
     "swiper": "^8.2.2",
+    "tsparticles": "^2.0.6",
+    "tsparticles-plugin-polygon-mask": "^2.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
