--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "react-tsparticles": "^2.0.6",
     "sweetalert2": "^11.4.17",
     "swiper": "^8.2.2",
